<resources>
    <string name="app_name">Final_rentalcar</string>
    <string name="name">Get Starde</string>
    <string name="title"> Title</string>
    <string name="description1">description image</string>
    <string name="description2">description image</string>
    <string name="description3">description image</string>
    <string name="description4">description image</string>
    <string name="description5">description image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>