<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="87dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="49dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <ImageView
        android:id="@+id/imageNoire"
        android:layout_width="519dp"
        android:layout_height="619dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/description1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backg" />

    <ImageView
        android:id="@+id/cercle"
        android:layout_width="318dp"
        android:layout_height="280dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="568dp"
        android:contentDescription="@string/description2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cercle_gris" />

    <ImageView
        android:id="@+id/cercle2"
        android:layout_width="323dp"
        android:layout_height="342dp"
        android:layout_marginStart="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description3"
        app:layout_constraintVertical_bias="0.565"
        app:srcCompat="@drawable/cercl_jaune" />

    <ImageView
        android:id="@+id/imgCar"
        android:layout_width="510dp"
        android:layout_height="424dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description4"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:srcCompat="@drawable/car" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="402dp"
        android:layout_height="334dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/description5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>